src/components/dialog/dialog.module.css
.backdrop {
  position: fixed;
  z-index: 1;
  inset: 0;

  display: flex;
  align-items: center;
  justify-content: center;

  background-color: rgb(0 0 0 / 50%);

  animation: fade-in 200ms ease-out;
}

.dialog {
  overflow: hidden;
  display: flex;
  flex-direction: column;

  max-width: 745px;
  max-height: 90vh;
  border-radius: 4px;

  background-color: var(--color-bg-secondary);

  animation: slide-in 200ms ease-out;
}

.header {
  display: flex;
  gap: 16px;
  align-items: center;
  justify-content: space-between;

  padding: 18px 24px;
}

.closeButton {
  cursor: pointer;

  display: flex;
  align-items: center;
  justify-content: center;

  width: 32px;
  height: 32px;
  border-radius: 50%;

  font-size: 16px;
  color: var(--color-text-secondary);

  background: transparent;

  transition: all 200ms ease;
}

.closeButton:hover {
  color: var(--color-text-primary);
  background-color: var(--color-bg-input-hover);
}

.content {
  overflow-y: auto;
  flex: 1;
  padding: 20px 24px;
}

.footer {
  display: flex;
  gap: 12px;
  align-items: center;
  justify-content: space-between;

  margin-bottom: 8px;
  padding: 18px 24px;
}

/* Animations */
@keyframes fade-in {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

@keyframes slide-in {
  from {
    transform: translateY(-500px);
    opacity: 0;
  }

  to {
    transform: translateY(0);
    opacity: 1;
  }
}

/* Responsive */
@media (width <= 768px) {
  .dialog {
    max-width: 95vw;
    margin: 20px;
  }

  .header,
  .content,
  .footer {
    padding-right: 16px;
    padding-left: 16px;
  }
}

